fix: remove early jvm option